Setter should have a single formal parameter, Getter no parameters https://bugs.webkit.org/show_bug.cgi?id=142903

Reviewed by Geoffrey Garen.

Source/JavaScriptCore:

* parser/Parser.cpp:
(JSC::Parser<LexerType>::parseFunctionInfo):
Enforce no parameters for getters and a single parameter
for setters, with informational error messages.

Source/WebInspectorUI:

* UserInterface/Views/GradientSlider.js:
(WebInspector.GradientSliderKnob.prototype.get wellColor):
Fix a getter that was incorrectly taking a parameter.

LayoutTests:

Correct a bunch of setters in existing tests and add
tests for good/bad getter and setter syntax.

* js/class-syntax-declaration-expected.txt:
* js/dom/exception-sequencing.html:
* js/dom/reserved-words-as-property-expected.txt:
* js/dom/script-tests/implicit-call-with-global-reentry.js:
(testObject.set setterTest):
* js/dom/script-tests/reserved-words-as-property.js:
(testWord):
* js/for-in-cached-expected.txt:
* js/object-literal-direct-put-expected.txt:
* js/object-literal-syntax-expected.txt:
* js/parser-syntax-check-expected.txt:
* js/script-tests/class-syntax-declaration.js:
* js/script-tests/class-syntax-super.js:
(class.Derived.extends.Base.set callBaseMethodInSetter):
(class.Derived.extends.Base.set baseMethodInGetterSetter):
* js/script-tests/for-in-cached.js:
* js/script-tests/object-literal-direct-put.js:
* js/script-tests/object-literal-syntax.js:
* js/script-tests/parser-syntax-check.js:

Canonical link: https://commits.webkit.org/161057@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181929 268f45cc-cd09-0410-ab3c-d52691b4dbfc